# llm_zoomcamp

./: .gitignore  01_rag_app_notebook.ipynb  01_rag_poc.ipynb  02_rag_cleaned.ipynb  03_persistent_rag_ingestion.ipynb  05_agentic_rag.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
01_agentic_rag/: 01_rag_poc.ipynb  01_rag_poc_marimo.py  03_persistent_rag_ingestion.ipynb  04_rag_cleaned_with_persistent_knowledge_base.ipynb  05_agentic_rag.ipynb  06_rag_with_frameworks.ipynb  README.md
01_agentic_rag/homework/: rag_helper.py  week1_homework.ipynb
02_vector_search/: 01_vector_search.ipynb  01_vector_search_brute_force.ipynb  02_vector_search_minsearch.ipynb  03_vector_search_ingest_persistent_knowledge_base.ipynb  03_vector_search_persistent_knowledge_base.ipynb  04_vector_search_query_persistent_knowledge_base.ipynb  05_vector_search_pgvector.ipynb  06_onnx_embedder.md  README.md  pyproject.toml  rag_helper.py
02_vector_search/homework/: week2_homework.ipynb
03_workflow_orchestration/: README.md  docker-compose.yaml
03_workflow_orchestration/flows/: 1_chat_without_rag.yaml  2_chat_with_rag.yaml  4_simple_agent.yaml  5_web_research_agent.yaml  6_multi_agent_research.yaml
04_evaluation/: 01_data_gen.ipynb  02_search_eval.ipynb  03_rag_eval.ipynb  04_agent_eval.ipynb  README.md
05_monitoring/: Makefile  README.md  app.py  assistant.py  dashboard.py  db_feedback.py  db_init.py  db_query.py  db_save.py  generate_synthetic_data.py  judge.py  metrics.py
06_best_practices/: 01_hybrid_search.md  02_reranking.md  03_hybrid_search_langchain.md  README.md
07_project/: README.md
08_dlt_data_pipelines/: .mcp.json  README.md  __deployment__.py  agent_traces_pipeline_analysis_plan.md  agent_traces_report.py  claude_usage_report.py  filesystem_pipeline.py  pyproject.toml  rest_api_pipeline.py
08_dlt_data_pipelines/.agents/skills/dlthub-router/: SKILL.md
08_dlt_data_pipelines/.agents/skills/improve-skills/: SKILL.md
08_dlt_data_pipelines/.agents/skills/setup-secrets/: SKILL.md  cli-reference.md
08_dlt_data_pipelines/.claude/rules/: data-exploration-workflow.md  dlthub-platform-profiles.md  dlthub-platform-workflow.md  filesystem-pipeline-workflow.md  init-dlthub-workspace.md  rest-api-pipeline-workflow.md
08_dlt_data_pipelines/.claude/skills/: dlthub-router  improve-skills  setup-secrets
08_dlt_data_pipelines/.claude/skills/add-incremental-loading/: SKILL.md
08_dlt_data_pipelines/.claude/skills/adjust-endpoint/: SKILL.md
08_dlt_data_pipelines/.claude/skills/build-notebook/: SKILL.md
08_dlt_data_pipelines/.claude/skills/build-notebook/references/: notebook-patterns.md
08_dlt_data_pipelines/.claude/skills/create-filesystem-pipeline/: SKILL.md
08_dlt_data_pipelines/.claude/skills/create-rest-api-pipeline/: SKILL.md
08_dlt_data_pipelines/.claude/skills/debug-deployment/: SKILL.md
08_dlt_data_pipelines/.claude/skills/debug-pipeline/: SKILL.md
08_dlt_data_pipelines/.claude/skills/deploy-workspace/: SKILL.md  advanced-patterns.md  scheduling-triggers.md
08_dlt_data_pipelines/.claude/skills/explore-data/: SKILL.md
08_dlt_data_pipelines/.claude/skills/explore-data/references/: analysis-plan-format.md  dlt-relation-api.md
08_dlt_data_pipelines/.claude/skills/find-source/: SKILL.md
08_dlt_data_pipelines/.claude/skills/new-endpoint/: SKILL.md
08_dlt_data_pipelines/.claude/skills/optimize-filesystem-performance/: SKILL.md
08_dlt_data_pipelines/.claude/skills/optimize-rest-api-performance/: SKILL.md
08_dlt_data_pipelines/.claude/skills/prepare-deployment/: SKILL.md  check_destination.py  deployment-module.md
08_dlt_data_pipelines/.claude/skills/setup-runtime/: SKILL.md
08_dlt_data_pipelines/.claude/skills/validate-data/: SKILL.md
08_dlt_data_pipelines/.claude/skills/view-data/: SKILL.md
08_dlt_data_pipelines/.dlt/: .toolkits  config.toml
08_dlt_data_pipelines/homework/: .gitignore  README.md  __deployment__.py  load_logfire.py  main.py  pyproject.toml
08_dlt_data_pipelines/homework/.dlt/: .toolkits  config.toml
(+12 files in other folders)
