[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "langchain>=1.3.14",
    "langchain-elasticsearch>=1.0.0",
    "langchain-huggingface>=1.2.2",
    "minsearch>=0.1.1",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "sqlitesearch>=0.1.2",
    "streamlit>=1.59.1",
    "tokenizers>=0.22.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[tool.uv.workspace]
members = [
    "02_vector_search",
    "05_monitoring/homework",
]

[tool.ruff.format]
preview = true
