[project]
name = "02-vector-search"
version = "0.1.0"
description = "uv setup for week 2 - vector search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.2",
]
