[project]
name = "02-vector-search"
version = "0.1.0"
description = "uv setup for week 2 - vector search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
