[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.28.1",
    "logfire>=4.38.0",
    "minsearch>=0.2.0",
    "openai>=2.46.0",
    "pydantic-ai>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "logfire",
    "fastmcp>=3.4.3",
    "marimo>=0.23.13",
    "pyarrow>=24.0.0",
    "ibis-framework>=12.0.0",
]
